# orbit-wars-kaggle

./: .gitignore  README.md  combat.py  main.py  plan_rl.md  pyproject.toml  train.py
orbit_wars/: __init__.py
orbit_wars/academy/: README.md  __init__.py  arena.py  campaign.py  cartography.py  chronicle.py  crucible.py  doctrine.py  rivals.py  tactician.py
orbit_wars/academy/configs/: default.yaml
orbit_wars/agents/: __init__.py
orbit_wars/agents/nearest_planet_sniper/: __init__.py  action_builder.py  config.py  policy.py
orbit_wars/army/: __init__.py  ballistics.py  ballistics_comet.py  ballistics_evaluator.py  ballistics_rotating.py  ballistics_static.py  physics.py
orbit_wars/astronomy/: __init__.py  forecast.py
orbit_wars/fleets/: __init__.py  enemy.py  models.py
orbit_wars/observatory/: __init__.py  decisions.py  tracing.py
orbit_wars/state/: __init__.py  adapters.py  models.py
orbit_wars/strategies/: __init__.py  nearest_planet_sniper.py  nearest_plannet_snipper.py  ppo_checkpoint.py
