[project]
name = "orbit-wars-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "draccus>=0.11.5",
    "kaggle-environments>=1.28.0",
    "loguru>=0.7.3",
    "numpy>=2.0.0",
    "torch>=2.11.0",
    "typer>=0.25.1",
]
